add project step 1 submit

--- a/ProjectManagement/Views/Dashboard/Index.cshtml
+++ b/ProjectManagement/Views/Dashboard/Index.cshtml
@@ -4,5 +4,7 @@
 }
 
 
-<h4 class="page-header my-4">@ViewBag.linkTitle</h4>
+<h4 class="page-header my-4">
+    @ViewBag.ProjectSector.Sector
+</h4>
 
