--- a/ProjectManagement/Views/ProjectLogFrame/LogFrameIndicator.cshtml
+++ b/ProjectManagement/Views/ProjectLogFrame/LogFrameIndicator.cshtml
@@ -4,5 +4,7 @@
     Layout = "~/Views/Shared/_AdminLayout.cshtml";
 }
 
-<h1>LogFrameIndicator</h1>
+
+<h4 class="page-header mt-3">Log Indicator</h4>
+<p class="mb-3">@ViewBag.ProjectSector.Sector</p>
 
