--- a/ProjectManagement/Views/Shared/_AdminLayout.cshtml
+++ b/ProjectManagement/Views/Shared/_AdminLayout.cshtml
@@ -22,12 +22,13 @@
 <body>
     <header>
         <nav class="m-0 navbar navbar-expand-lg navbar-dark">
-            <div class="container-fluid">
+            <div class="container-fluid justify-content-between align-items-center">
                 <div>
                     <a class="sidedrawer-toggle d-md-none js-show-sidedrawer d-print-none"><i class="fas fa-bars"></i></a>
                     <a class="sidedrawer-toggle d-none d-md-inline-block js-hide-sidedrawer d-print-none"><i class="fas fa-bars"></i></a>
                     <span class="navbar-brand ml-1">Management information system (MIS)</span>
                 </div>
+                <a class="btn btn-flat btn-lg p-0 m-0 white-text" href="/Projects/Features"><i class="fas fa-long-arrow-alt-left mr-1"></i> Back to Features</a>
             </div>
         </nav>
     </header>
