--- a/ProjectManagement/Views/ProjectLogFrame/LogFrame.cshtml
+++ b/ProjectManagement/Views/ProjectLogFrame/LogFrame.cshtml
@@ -13,7 +13,8 @@
 }
 
 <div class="container">
-    <h4 class="page-header my-3">Log Frame</h4>
+    <h4 class="page-header mt-3">Log Frame</h4>
+    <p class="mb-3">@ViewBag.ProjectSector.Sector</p>
 
     <form id="formAdd">
         <div id="step1">
@@ -26,9 +27,10 @@
 
                 <div class="row">
                     <div class="col-lg-6">
-                        <select id="selectProjectName" asp-items="@ViewBag.ProjectName" class="mdb-select md-form" searchable="Search here.." required>
-                            <option value="0" disabled selected>Choose Project Name</option>
+                        <select id="selectProjectName" asp-items="@ViewBag.ProjectName" class="mdb-select md-form" searchable="Search here..">
+                            <option value="" disabled selected>Choose Project Name</option>
                         </select>
+                        <span id="selectProject" class="red-text"></span>
                     </div>
                     <div class="col-lg-6">
                         <div class="md-form">
@@ -169,6 +171,15 @@
         formAdd.addEventListener("submit", function(evt) {
             evt.preventDefault();
 
+            if (!this.selectProjectName.value) {
+                step1.style.display = "block";
+                step3.style.display = "none";
+
+                this.selectProjectName.setAttribute("required",true);
+                this.querySelector("#selectProject").textContent = "Select project name";
+                return;
+            }
+
             const model = {
                 ProjectId: this.selectProjectName.value,
                 ProjectGoal: this.inputProjectGoal.value,
@@ -209,6 +220,8 @@
         //on change Project Name
         formAdd.selectProjectName.addEventListener("change", function(evt) {
             const id = this.value;
+
+            formAdd.querySelector("#selectProject").textContent = "";
 
             setProjectData({}, false);
 
