--- a/ProjectManagement/wwwroot/pages-css/add-project.css
+++ b/ProjectManagement/wwwroot/pages-css/add-project.css
@@ -3,7 +3,7 @@
 /***form style***/
 .select-wrapper input.select-dropdown { margin: 0 0 .50rem; }
 fieldset legend { color: #484848; padding: 0 5px; font-size: 1.3rem; }
-#formAdd { display: none }
+#formStep2 { display: none }
 
 #successMessage { display: none }
 #donor-container span { background-color: #ddd; border-radius: 5px; padding: 4px 8px; margin-right: 7px; text-align: center; margin-bottom: 6px; display: inline-block; }
